kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - hubble.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
